Lesson_11. Ordersapp CRUD

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -54,10 +54,10 @@
                             </a>
                             <ul class="dropdown-menu bg-dark">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'auth:profile' %}">профиль</a>
+                                    <a class="nav-link" href="{% url 'auth:profile' %}">Профиль</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">заказы</a>
+                                    <a class="nav-link" href="{% url 'orders:list' %}">Заказы</a>
                                 </li>
                             </ul>
                         </div>
