--- a/ordersapp/templates/ordersapp/order_detail.html
+++ b/ordersapp/templates/ordersapp/order_detail.html
@@ -1,4 +1,4 @@
-{% extends "products/base.html" %}
+{% extends "mainapp/base.html" %}
 {% load static %}
 
 
@@ -8,10 +8,10 @@
    <div class="basket_list">
        {% for item in object.orderitems.select_related %}
            <div class="basket_record">
-               <img style="height: 150px" src="{{ item.product.image.url }}"
+               <img style="height: 150px" src="{{ item.product.image_url.url }}"
                     alt="{{ item.product.short_desc }}">
                <span class="category_name">
-                   {{ item.product.category.name }}
+                   {{ item.product.category.name | title }}
                </span>
                <span class="product_name">{{ item.product.name }}</span>
                <span class="product_price">
