--- a/adminapp/templates/adminapp/includes/inc_left_bar.html
+++ b/adminapp/templates/adminapp/includes/inc_left_bar.html
@@ -27,14 +27,18 @@
                 </a>
                 <a class="nav-link" href="{% url 'admin:product_view' %}">
                     <div class="sb-nav-link-icon">
-                        <svg class="svg-inline--fa fa-tshirt fa-w-20" aria-hidden="true" focusable="false"
-                             data-prefix="fas" data-icon="tshirt" role="img" xmlns="http://www.w3.org/2000/svg"
-                             viewBox="0 0 640 512" data-fa-i2svg="">
-                            <path fill="currentColor"
-                                  d="M631.2 96.5L436.5 0C416.4 27.8 371.9 47.2 320 47.2S223.6 27.8 203.5 0L8.8 96.5c-7.9 4-11.1 13.6-7.2 21.5l57.2 114.5c4 7.9 13.6 11.1 21.5 7.2l56.6-27.7c10.6-5.2 23 2.5 23 14.4V480c0 17.7 14.3 32 32 32h256c17.7 0 32-14.3 32-32V226.3c0-11.8 12.4-19.6 23-14.4l56.6 27.7c7.9 4 17.5.8 21.5-7.2L638.3 118c4-7.9.8-17.6-7.1-21.5z"></path>
-                        </svg><!-- <i class="fas fa-tshirt"></i> Font Awesome fontawesome.com -->
+                        <i class="fas fa-tshirt"></i>
                     </div>
                     Продукты
+                </a>
+                <a class="nav-link" href="{% url 'admin:order_view' %}">
+                    <div class="sb-nav-link-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                            <!--! Font Awesome Pro 6.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                            <path d="M0 24C0 10.75 10.75 0 24 0H96C107.5 0 117.4 8.19 119.6 19.51L121.1 32H312V134.1L288.1 111C279.6 101.7 264.4 101.7 255 111C245.7 120.4 245.7 135.6 255 144.1L319 208.1C328.4 218.3 343.6 218.3 352.1 208.1L416.1 144.1C426.3 135.6 426.3 120.4 416.1 111C407.6 101.7 392.4 101.7 383 111L360 134.1V32H541.8C562.1 32 578.3 52.25 572.6 72.66L518.6 264.7C514.7 278.5 502.1 288 487.8 288H170.7L179.9 336H488C501.3 336 512 346.7 512 360C512 373.3 501.3 384 488 384H159.1C148.5 384 138.6 375.8 136.4 364.5L76.14 48H24C10.75 48 0 37.25 0 24V24zM224 464C224 490.5 202.5 512 176 512C149.5 512 128 490.5 128 464C128 437.5 149.5 416 176 416C202.5 416 224 437.5 224 464zM416 464C416 437.5 437.5 416 464 416C490.5 416 512 437.5 512 464C512 490.5 490.5 512 464 512C437.5 512 416 490.5 416 464z"/>
+                        </svg>
+                    </div>
+                    Заказы
                 </a>
             </div>
         </div>
