--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -93,6 +93,8 @@
 <!-- FontAwesome script -->
 <script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
 
+<script src="{% static 'js/orders_script.js' %}"></script>
+
 {% block js %}
 {% endblock js %}
 
