--- a/ordersapp/templates/ordersapp/includes/inc_order_summary.html
+++ b/ordersapp/templates/ordersapp/includes/inc_order_summary.html
@@ -1,7 +1,7 @@
 {% if object.pk %}
-    <div class="h2">Заказ №{{ object.pk }} от {{ object.created|date:"Y-m-d H:i:s" }}</div>
+    <div class="h2" style="margin-top: 65px">Заказ №{{ object.pk }} от {{ object.created|date:"Y-m-d H:i:s" }}</div>
     <hr>
-    <div class="h4">заказчик:
+    <div class="h4">Заказчик:
         {% if user.first_name and user.last_name %}
             {{ user.last_name }} {{ user.first_name }}
         {% elif user.first_name %}
@@ -22,9 +22,9 @@
         общая стоимость: <span class="order_total_cost">{{ object.get_total_cost }}</span> руб
     </div>
 {% else %}
-    <div class="h2">Новый заказ</div>
+    <div class="h2" style="margin-top: 65px">Новый заказ</div>
     <hr>
-    <div class="h4">заказчик:
+    <div class="h4">Заказчик:
         {% if user.first_name and user.last_name %}
             {{ user.last_name }} {{ user.first_name }}
         {% elif user.first_name %}
@@ -35,13 +35,11 @@
             {{ user.username }}
         {% endif %}
     </div>
-    {% if basket.0 %}
-        <div class="h4">
-            общее количество товаров: <span class="order_total_quantity">{{ basket.0.get_total_quantity }}</span>
-        </div>
-        <div class="h3">
-            общая стоимость: <span class="order_total_cost">{{ basket.0.get_total_cost }}</span> руб
-        </div>
-    {% endif %}
+    <div class="h4">
+        общее количество товаров: <span class="order_total_quantity">{{ object.get_total_quantity }}</span>
+    </div>
+    <div class="h3">
+        общая стоимость: <span class="order_total_cost">{{ object.get_total_cost }}</span> руб
+    </div>
 {% endif %}
 <hr>
