--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -86,8 +86,11 @@
 {% block footer %}
 {% endblock footer %}
 
-<!-- Bootstrap core JavaScript -->
+<!-- jquery library -->
 <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+<script src="{% static 'js/jquery.formset.js' %}"></script>
+
+<!-- Bootstrap core JavaScript -->
 <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
 <!-- FontAwesome script -->
